# info-202-final-project

./: .env.example  README.md  pyproject.toml
data/: ml_analyzer.db  package_classifications.json  seed_repositories.json
scripts/: build_graph.py  collect_data.py
src/collection/: __init__.py  github_client.py  repo_fetcher.py  seed_repos.py
src/graph/: __init__.py  builder.py  metrics.py  paths.py
src/ontology/: __init__.py  inference.py  package_taxonomy.py  relation_types.py
src/parsing/: __init__.py  dependency_extractor.py  pyproject_parser.py  requirements_parser.py  setup_parser.py
src/storage/: __init__.py  database.py  models.py
src/ui/: app.py
src/ui/components/: __init__.py  facet_filters.py  graph_renderer.py  package_card.py
src/ui/pages/: 1_network_view.py  2_package_view.py  3_path_explorer.py
